--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
 }
 
 .footer {
-  background-color: #111;
+  background-color: #000000;
   color: #fff;
   padding: 10px 0;
 }
@@ -54,4 +54,9 @@ body {
 h1 span {
   font-weight: bold;
   color: #000;
+}
+.footer1 {
+  background-color: #fafafa;
+  color: #fff;
+  padding: 10px 0;
 }
